--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "gulp build",
+    "build": "npm i gulp@4.0.0 --save-dev & yarn & gulp build",
     "test": "echo \"Warn: no test specified\" && exit 1",
     "serve": "gulp serve"
   },
@@ -13,7 +13,10 @@
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
     "nvm": "^0.0.4",
-    "progressbar.js": "^1.0.1"
+    "progressbar.js": "^1.0.1",
+    
+
+
   },
   "devDependencies": {
     "brfs": "^2.0.2",
