--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "time-timer-webapp",
+  "name": "ditimer",
   "version": "1.0.0",
-  "description": "",
+  "description": "<section align=\"right\">",
+  "main": "gulpfile.js",
+  "directories": {
+    "doc": "docs"
+  },
   "scripts": {
-    "build": "npm i gulp@4.0.0 --save-dev & yarn & gulp build",
-    "test": "echo \"Warn: no test specified\" && exit 1",
-    "serve": "gulp serve"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/7pub/DITimer.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/7pub/DITimer/issues"
+  },
+  "homepage": "https://github.com/7pub/DITimer#readme",
   "dependencies": {
-    "jquery": "^3.6.0",
-    "jquery-ui": "^1.13.0",
-    "nvm": "^0.0.4",
-    "progressbar.js": "^1.0.1",
-    
-  },
-  "devDependencies": {
-    "brfs": "^2.0.2",
-    "browser-sync": "^2.27.10",
-    "browserify": "^17.0.0",
-    "del": "^6.1.0",
-    "gulp": "^3.9.1",
-    "gulp-install": "^1.1.0",
-    "packageify": "^1.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^2.0.0"
-  },
-  "browser": {
-    "jquery-ui-effects": "./node_modules/jquery-ui/ui/effect.js"
+    "gulp": "4.0.2"
   }
 }
