--- a/package.json
+++ b/package.json
@@ -1,25 +1,39 @@
 {
-  "name": "ditimer",
+  "name": "DITimer",
   "version": "1.0.0",
-  "description": "<section align=\"right\">",
-  "main": "gulpfile.js",
-  "directories": {
-    "doc": "docs"
-  },
+  "description": "Time DIT FIT",
+  "LICENSE": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "test": "echo \"Warn: no test specified\" && exit 1",
+    "serve": "gulp serve"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/7pub/DITimer.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/7pub/DITimer/issues"
-  },
-  "homepage": "https://github.com/7pub/DITimer#readme",
+  "author": "cali",
   "dependencies": {
-    "gulp": "4.0.2"
+    "brfs": "^2.0.2",
+    "jquery": "^3.6.0",
+    "jquery-ui": "^1.13.2",
+    "progressbar.js": "^1.1.0",
+    "save-dev": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.27.10",
+    "browserify": "^17.0.0",
+    "del": "^6.1.1",
+    "glob-parent": "^5.1.2",
+    "gulp": "^4.0.0",
+    "packageify": "^1.0.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
+  },
+  "browser": {
+    "jquery-ui-effects": "./node_modules/jquery-ui/ui/effect.js"
+  },
+  "main": "index.js",
+  "repository": "https://github.com/7pub/DITimer.git",
+  "license": "MIT",
+  "private": true,
+  "optionalDependencies": {
+    "globule": "1.3.4"
   }
 }
